Finished responsive design for both pages.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                     <h1>Providing Best Organic Products</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora odit laboriosam fugit amet. Rerum exercitationem ad cum ipsa eius saepe nostrum tempora architecto, vero, aspernatur reprehenderit odit cupiditate non maiores!</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequuntur dignissimos ab, possimus magni dolorem ratione, adipisci est maxime dolor fugiat eaque mollitia tempore numquam.</p>
-                    <button class="uppercase-button"><a href="#products">Shop now</a></button>
+
+                    <div class="about-button">
+                        <button class="uppercase-button"><a href="#products">Shop now</a></button>
+                    </div>
                 </div>
                 <div class="about-motto-container">
                     <div class="shape">
@@ -250,6 +253,7 @@
                         </li>
                     </ul>
                 </div>
+                
                 <div>
                     <ul class="image-gallery-container">
                         <li><img src="./assets/assets/gallery1.jpg" alt="a hand holding an apple"></li>
