Finished hover effect.

--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                                 <textarea name="user-message" id="message" cols="52" rows="7" minlength="2" maxlength="200" >Your Message...</textarea>
                             </fieldset>
                         
-                              <button type="submit">Send Message</button>
+                              <button class="button" type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
