--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="header-text-container" id="header-text-container">
                     <h1>Providing Tasty & Healthy Food</h1>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa repellendus dolorem, minima, praesentium eaque optio numquam voluptates nemo, iusto reiciendis.</p>
-                    <button class="header-text-button" id="header-text-button"><a href=#products">Shop now</a></button>
+                    <button class="header-text-button button" id="header-text-button"><a href=#products">Shop now</a></button>
                 </div>   
 
                 <div class="header-image-container" id="header-image-container"> 
@@ -63,7 +63,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam consequuntur dignissimos ab, possimus magni dolorem ratione, adipisci est maxime dolor fugiat eaque mollitia tempore numquam.</p>
 
                     <div class="about-button">
-                        <button class="uppercase-button"><a href="#products">Shop now</a></button>
+                        <button class="button"><a href="#products" class="uppercase-button">Shop now</a></button>
                     </div>
                 </div>
                 <div class="about-motto-container">
@@ -95,7 +95,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -111,7 +111,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -143,7 +143,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -159,7 +159,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -175,7 +175,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>                     
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -191,7 +191,7 @@
                         <div class="price">$350     
                             <span class="price-before">$370</span>
                         </div>
-                        <button>
+                        <button class="button">
                             <a href="#">Add To Cart</a>
                         </button>
                     </div>
@@ -253,7 +253,7 @@
                         </li>
                     </ul>
                 </div>
-                
+
                 <div>
                     <ul class="image-gallery-container">
                         <li><img src="./assets/assets/gallery1.jpg" alt="a hand holding an apple"></li>
@@ -286,7 +286,7 @@
                         <img src="./assets/assets/blog1.jpg" alt="basket of various vegetables">
                         <h3>Departure Ourselves Very As He Peculiar Believed</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
-                        <button>
+                        <button class="button">
                             <a href="#">Read more</a>
                         </button>
                     </div>
@@ -294,7 +294,7 @@
                         <img src="./assets/assets/blog2.jpg" alt="basket of various fruits">
                         <h3>Departure Ourselves Very As He Peculiar Believed</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
-                        <button>
+                        <button class="button">
                             <a href="#">Read more</a>
                         </button>
                     </div>
@@ -302,7 +302,7 @@
                         <img src="./assets/assets/blog3.jpg" alt="various spices and herbs displayed on a wooden table">
                         <h3>Departure Ourselves Very As He Peculiar Believed</h3>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis aliquid in deserunt nihil!</p>
-                        <button>
+                        <button class="button">
                             <a href="#">Read more</a>
                         </button>
                     </div>
