--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
 
                 <div class="header-nav" id="header-nav">
                     <nav>
-                        <ul>
+                        <div class="open-menu">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
+                        <ul class="main-menu">
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./index.html#news">Blog</a></li>
                             <li><a href="./contact.html">Contact</a></li>
                             <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+                            <div class="close-menu">
+                                <i class="fa-solid fa-xmark"></i>
+                            </div>
                         </ul>
                     </nav>
                 </div>                
@@ -388,5 +394,7 @@
             <p>Copyright &copy; 2023. All Rights Reserved</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
